@@ -1,3 +1,8 @@
+2005-09-02	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_get_path_at_pos): Actually accept
+	  widget coordinates here, to be compatible with GtkTreeView.
+
 2005-09-01	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_dispose): Reset the drag destination
